# striprtf

./: .gitignore  .travis.yml  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  perf.py  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: build.yml
striprtf/: striprtf  striprtf.py
tests/: test_ansicpg1250.py  test_bytes.py  test_calcium_score.py  test_encoding.py  test_extract_simple_table.py  test_french.py  test_from_strings.py  test_hello.py  test_hyperlink_replacement.py  test_hyperlinks.py  test_issue_11.py  test_issue_15.py  test_issue_20.py  test_issue_28.py  test_issue_29.py  test_issue_37.py  test_issue_38.py  test_issue_46.py  test_issue_53.py  test_issue_55.py  test_issue_58.py  test_issue_63.py  test_line_breaks_google_docs.py  test_line_breaks_textedit_mac.py  test_mac_textedit_hyperlink.py  test_nbsp.py  test_nested_table.py  test_nutridoc.py  test_sample_3.py  test_simple.py  test_speiseplan.py  test_table_extraction.py  test_tx_rtf32.py  test_unicode.py
tests/csv/: simple_table.csv
tests/rtf/: BVWGT_20241227_W258_2227269_1_00_01.rtf  Example_text.rtf  Speiseplan_KW_32-33_Eybl.rtf  TX_RTF32_18.0.541.501.rtf  ansicpg1250.rtf  bytes.rtf  calcium_score.rtf  encoding.rtf  french.rtf  hello.rtf  hyperlink.rtf  hyperlinks.rtf  issue_11.rtf  issue_15.rtf  issue_20.rtf  issue_28.rtf  issue_29_bad.rtf  issue_29_good.rtf  issue_37.rtf  issue_38.rtf  issue_55.rtf  issue_55_1.rtf  issue_63.rtf  line_break_textedit_mac.rtf  mac_textedit_hyperlink.rtf  minimal_table.rtf  nbsp.rtf  nested_table.rtf  nutridoc.rtf  pages_table_sample.rtf  (+5 more)
(+29 files in other folders)
